--- a/src/app/income-accounts/income-accounts.component.css
+++ b/src/app/income-accounts/income-accounts.component.css
@@ -101,8 +101,123 @@ hr {
   border: 1px solid var(--primary);
 }
 
+/* FORM & AlERT STYLES */
+.form-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-left: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 50%);
+  z-index: 10;
+}
 
+form {
+  width: 700px;
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary);
+  border: 3px solid var(--main);
+  border-radius: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
+  position: relative;
+}
 
+.fa-xmark {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 50px;
+  color: var(--secondary);
+  cursor: pointer;
+}
+
+.inputs-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+label {
+  margin-bottom: 10px;
+  font-size: 35px;
+  color: var(--secondary);
+}
+
+input {
+  margin-bottom: 30px;
+  height: 70px;
+  padding: 10px 20px;
+  font-size: 30px;
+  color: var(--primary);
+  background-color: var(--secondary);
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
+}
+
+.normal-btn {
+  width: 100%;
+  height: 80px;
+  padding: 10px 20px;
+  font-size: 35px;
+  color: #F7F9FC;
+  background-color: var(--main);
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
+  cursor: pointer;
+}
+
+.alert-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-left: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 50%);
+}
+
+.alert {
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  padding: 60px;
+  background-color: var(--primary);
+  border: 3px solid var(--main);
+  border-radius: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 25%);
+  position: relative;
+}
+
+.alert-name {
+  margin-bottom: 10px;
+  font-size: 35px;
+  color: var(--secondary);
+}
+
+.alert-msg {
+  font-size: 30px;
+  color: var(--secondary);
+}
+
+.btns-container {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  gap: 100px;
+}
+
+/* MEDIA QUERIES */
 @media (width <= 1729px) {
   table {
     width: 1320px;
@@ -148,6 +263,10 @@ hr {
   .popup {
     left: 33.5%;
   }
+
+  .form-container, .alert-container {
+    padding-left: 200px;
+  }
 }
 
 @media (width <= 1279px) {
@@ -157,6 +276,44 @@ hr {
 
   .popup {
     left: 32.95%;
+  }
+
+  /* FORM & ALERT STYLES */
+  .form-container, .alert-container {
+    padding-left: 0px;
+    padding: 30px;
+  }
+
+  form {
+    width: 500px;
+    padding: 30px;
+  }
+  
+  label {
+    font-size: 30px;
+  }
+  
+  input {
+    height: 60px;
+    font-size: 25px;
+  }
+  
+  .normal-btn {
+    height: 70px;
+    font-size: 30px;
+  }
+
+  .alert {
+    width: 500px;
+    padding: 30px;
+  }
+  
+  .alert-name {
+    font-size: 30px;
+  }
+  
+  .alert-msg {
+    font-size: 25px;
   }
 }
 
