--- a/src/app/income-accounts/income-accounts.component.css
+++ b/src/app/income-accounts/income-accounts.component.css
@@ -185,6 +185,7 @@ input {
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 50%);
+  z-index: 10;
 }
 
 .alert {
