created transactions design

--- a/src/app/income-transactions/income-transactions.component.html
+++ b/src/app/income-transactions/income-transactions.component.html
@@ -1,1 +1,87 @@
-<p>income-transactions works!</p>
+<div class="actions-container">
+  <button class="nunito-sans-bold section-btn">Create transaction</button>
+  <input class="nunito-sans-semibold search-input" type="text" placeholder="Search...">
+</div>
+<div class="table-container">
+  <table>
+    <tr class="nunito-sans-bold header">
+      <th>Source</th>
+      <th>Amount</th>
+      <th>Receiver</th>
+    </tr>
+    @for(transaction of transactions; track transaction.source; let idx = $index) {
+      <tr class="nunito-sans-semibold row" title="Click to delete transaction">
+        <td>{{ transaction.source }}</td>
+        <td>{{ transaction.amount | number }}</td>
+        <td>{{ transaction.receiver }}</td>
+      </tr>
+    }
+  </table>
+</div>
+@if(!true) {
+  <div class="form-container">
+    <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+      <i class="fa-solid fa-xmark"></i>
+      <div class="inputs-container">
+        <label class="nunito-sans-semibold" for="source">Source</label>
+        <input 
+          class="nunito-sans-regular form-input" 
+          type="text" 
+          id="source"
+          ngModel
+          name="source"
+          required>
+        <label class="nunito-sans-semibold" for="amount">Amount</label>
+        <input 
+          class="nunito-sans-regular form-input" 
+          type="number"
+          min="1"
+          max="999999999" 
+          id="amount"
+          ngModel
+          name="amount"
+          required>
+        <label class="nunito-sans-semibold" for="receiver">Receiver</label>
+        <input 
+          class="nunito-sans-regular form-input" 
+          type="text" 
+          id="receiver"
+          ngModel
+          name="receiver"
+          required>
+      </div>
+      <button 
+        class="nunito-sans-bold normal-btn form-btn"
+        [disabled]="!form.valid">
+        Create transaction
+      </button>
+    </form>
+  </div>
+}
+@if(!true) {
+  <div class="alert-container">
+    <div class="alert">
+      @if(true){
+        <i class="fa-solid fa-xmark"></i>
+      }
+      <p class="nunito-sans-bold alert-name">Insufficient funds</p>
+      <p class="nunito-sans-regular alert-msg">
+        The amount you want to transfer exceeds your current balance. Please enter a lower amount to proceed.
+      </p>
+    </div>
+  </div>
+}
+@if(!true) {
+  <div class="alert-container">
+    <div class="alert">
+      <p class="nunito-sans-bold alert-name">Transaction deletion</p>
+      <p class="nunito-sans-regular alert-msg">
+        Deleting this transaction will reverse it. The amount will be returned to the original account.
+      </p>
+      <div class="btns-container">
+        <button class="nunito-sans-bold normal-btn">Close</button>
+        <button class="nunito-sans-bold normal-btn">Delete</button>
+      </div>
+    </div>
+  </div>
+}
