changed gap sizing

--- a/src/app/income-transactions/income-transactions.component.css
+++ b/src/app/income-transactions/income-transactions.component.css
@@ -195,7 +195,7 @@ label {
   margin-top: 30px;
   display: flex;
   justify-content: space-between;
-  gap: 100px;
+  gap: 10%;
 }
 
 /* MEDIA QUERIES */
