--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,11 +4,11 @@
       <div class="numbers-container">
         <div>
           <h1 class="nunito-sans-bold">SAVINGS</h1>
-          <h2 class="nunito-sans-regular">100.000.000</h2>
+          <h2 class="nunito-sans-regular">{{ savings }}</h2>
         </div>
         <div>
           <h1 class="nunito-sans-bold">BUDGET</h1>
-          <h2 class="nunito-sans-regular">100.000.000</h2>
+          <h2 class="nunito-sans-regular">{{ budget }}</h2>
         </div>
       </div>
       <div class="charts-container">
@@ -33,9 +33,9 @@
     <div class="target-container">
       <h1 class="nunito-sans-bold">TARGET</h1>
       <div>
-        <h2 class="nunito-sans-regular">100%</h2>
+        <h2 class="nunito-sans-regular">{{ percentage + '%' }}</h2>
         <div class="percentage-container">
-          <div class="percentage" [style.height]="percentage"></div>
+          <div class="percentage" [style.height]="percentage + '%'"></div>
         </div>
       </div>
     </div>
