added decimal pipe

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,11 +4,11 @@
       <div class="numbers-container">
         <div>
           <h1 class="nunito-sans-bold">SAVINGS</h1>
-          <h2 class="nunito-sans-regular">{{ savings }}</h2>
+          <h2 class="nunito-sans-regular">{{ savings | number }}</h2>
         </div>
         <div>
           <h1 class="nunito-sans-bold">BUDGET</h1>
-          <h2 class="nunito-sans-regular">{{ budget }}</h2>
+          <h2 class="nunito-sans-regular">{{ budget | number }}</h2>
         </div>
       </div>
       <div class="charts-container">
