--- a/src/app/income-transactions/income-transactions.component.html
+++ b/src/app/income-transactions/income-transactions.component.html
@@ -66,7 +66,7 @@
         Insufficient funds
       </p>
       <p class="nunito-sans-regular alert-msg">
-        The amount you want to transfer exceeds your current balance. Please enter a lower amount to proceed.
+        The amount exceeds the available balance. Please enter a lower amount or check the account balance to proceed.
       </p>
     </div>
   </div>
