--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -41,6 +41,15 @@
       ask you for confirmation before deleting it.
     </li>
     <li class="nunito-sans-regular">
+      <span class="nunito-sans-bold">Track Income and Expenses:</span>
+      Whenever you create a transaction from an income account to a 
+      main account or from a main account to an expense account, the 
+      dashboard tracks these movements. Income and expense accounts 
+      will accumulate all amounts added or passed, allowing you to 
+      see how much each income account has provided and how much 
+      each expense account has taken in total.
+    </li>
+    <li class="nunito-sans-regular">
       <span class="nunito-sans-bold">Built-in Safety Net:</span>
       Feel free to explore! The app provides helpful prompts to 
       catch potential errors before they happen, allowing you 
