added a min length for the password

--- a/src/app/auth-form/auth-form.component.html
+++ b/src/app/auth-form/auth-form.component.html
@@ -18,6 +18,7 @@
         type="text" 
         id="password" 
         placeholder="password2024"
+        minlength="6"
         ngModel
         name="password"
         required>
