--- a/src/app/expense-transactions/expense-transactions.component.html
+++ b/src/app/expense-transactions/expense-transactions.component.html
@@ -9,7 +9,7 @@
       <th>Amount</th>
       <th>Receiver</th>
     </tr>
-    @for(transaction of transactions | filter:search ; track transaction.source; let idx = $index) {
+    @for(transaction of transactions | filter:search ; track transaction; let idx = $index) {
       <tr class="nunito-sans-semibold row" title="Click to delete transaction" (click)="onOpenAlert(idx)">
         <td>{{ transaction.source }}</td>
         <td>{{ transaction.amount | number }}</td>
