added log out functionality

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-      <button class="nunito-sans-bold log-out">Log Out</button>
+      <button class="nunito-sans-bold log-out" (click)="onLogOut()">Log Out</button>
     </div>
   </header>
 }
